--- a/src/app.html
+++ b/src/app.html
@@ -17,7 +17,7 @@
 				}
 			})();
 		</script>
-		<link rel="icon" href="%sveltekit.assets%/favicon.ico" />
+		<link rel="icon" href="%sveltekit.assets%/favicon.png" />
 		<meta name="viewport" content="width=device-width" />
 		%sveltekit.head%
 	</head>
